--- a/CppTest/class/.vscode/launch.json
+++ b/CppTest/class/.vscode/launch.json
@@ -1,29 +1,30 @@
 {
+    "configurations": [
+    {
+        "name": "(gdb) 启动",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/build/${fileBasenameNoExtension}",//可执行文件地址，出问题找不到文件时可以删除json内容再复制回来或重写
+        "args": [],
+        "stopAtEntry": false,
+        "cwd": "${fileDirname}",
+        "preLaunchTask": "build",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "gdb",
+        "setupCommands": [
+            {
+                "description": "为 gdb 启用整齐打印",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            }
+        ]
+    }
+    ]
+    
+       
     // 使用 IntelliSense 了解相关属性。 
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch Debug", //名称
-            "type": "cppdbg", //调试类型，除使用msvc进行调试外，均为该类型
-            "request": "launch",
-            "program": "${workspaceFolder}/bin/${workspaceFolderBasename}", //指定C/C++程序位置
-            "args": [], //指定运行参数
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}", //指定工作目录
-            "preLaunchTask": "build", //在调试前会先调用build_debug这个task编译构建程序
-            "environment": [],
-            "externalConsole": false,
-                "MIMode": "gdb", //指定使用gdb调试
-                "setupCommands": [
-                    {
-                        "description": "Enable pretty-printing for gdb",
-                        "text": "-enable-pretty-printing",
-                        "ignoreFailures": true
-                    }
-                ]
-           
-        }
-    ]
+    
 }
