--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,7 @@
             "name": "g++ - 生成和调试活动文件",
             "type": "cppdbg",
             "request": "launch",
-           // "program": "${fileDirname}/${fileBasenameNoExtension}",
-           "program": "${fileDirname}/main2",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -23,7 +22,7 @@
                     "ignoreFailures": true
                 }
             ],
-           // "preLaunchTask": "C/C++: g++ 生成活动文件",
+           "preLaunchTask": "C/C++: g++ 生成活动文件",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
