--- a/DataStructure/BinaryTree/.vscode/settings.json
+++ b/DataStructure/BinaryTree/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "*.py": "python",
         "*.txt": "cmake",
-        "ostream": "cpp"
-    }
+        "ostream": "cpp",
+        "cstddef": "cpp",
+        "*.tcc": "cpp",
+        "type_traits": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
