--- a/DataStructure/BinaryTree/.vscode/settings.json
+++ b/DataStructure/BinaryTree/.vscode/settings.json
@@ -5,7 +5,9 @@
         "ostream": "cpp",
         "cstddef": "cpp",
         "*.tcc": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "algorithm": "cpp",
+        "list": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
