--- a/DataStructure/Graph/.vscode/settings.json
+++ b/DataStructure/Graph/.vscode/settings.json
@@ -53,5 +53,6 @@
         "iomanip": "cpp",
         "ctime": "cpp",
         "list": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
