--- a/DataStructure/Graph/CMakeLists.txt
+++ b/DataStructure/Graph/CMakeLists.txt
@@ -9,7 +9,6 @@ set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps=obj")# CPP
 #保存临时文件，预处理和汇编都是生成object的中间临时文件,=obj，表示生成预处理文件的位置和.o同目录,不加时在build目录下
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-schedule-insns2")
 
 
 
@@ -23,7 +22,14 @@ get_filename_component(mainname ${mainfile} NAME_WE)#转换生成mainname，NAME
 add_executable(${mainname} ${mainfile})
 ##target_link_libraries( ${mainname} LINK Threads::Threads)	# 添加链接库，LINK是在src目录的CMakeLists中定义的，Threads来自上面引入的包
 endforeach()
-
+if (CMAKE_BUILD_TYPE STREQUAL Debug)##添加_DEBUG宏
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=leak")
+##不适用于release 模式
+##-fno-omit-frame-pointer 保留栈帧指针，获取详细信息，运行默认关闭，调试时默认打开
+    add_definitions(
+        -D_DEBUG
+    )
+endif ()
 #aux_source_directory(. ALL_SRCS)			# 添加当前目录下所有的源文件
 #add_executable( ${PROJECT_NAME} ${ALL_SRCS})//默认projectname就是main
 #target_link_libraries( ${PROJECT_NAME} LINK)	# 添加链接库，LINK是在src目录的CMakeLists中定义的
