--- a/DataStructure/Graph/.vscode/launch.json
+++ b/DataStructure/Graph/.vscode/launch.json
@@ -5,7 +5,8 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/build/${fileBasenameNoExtension}",//可执行文件地址，出问题找不到文件时可以删除json内容再复制回来或重写
-        "args": [],
+        //"args": ["<","test.txt",">","result.txt"],
+        "args": ["<","test4.txt"],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "preLaunchTask": "build",
